// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para el <GifGrid /> Should be use the default options when options is defined  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  >
    <ol />
  </div>
</Fragment>
`;

exports[`Pruebas para el <GifGrid /> Should be use the default options when options is not defined 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola
  </h3>
  <div
    className="card-grid"
  >
    <ol>
      <GifGridItem
        id="ABC"
        key="ABC"
        title="Cosa"
        url="https://localhost/cualquier/cosa.jpg"
      />
    </ol>
  </div>
</Fragment>
`;
